--- a/app/build.gradle
+++ b/app/build.gradle
@@ -81,7 +81,7 @@ dependencies {
     implementation("org.tensorflow:tensorflow-lite-gpu:${tfl_version}") { changing = true }
     implementation 'org.tensorflow:tensorflow-lite-support:0.0.0-nightly'
     // Dependency for Segmentation with Task Library
-    implementation 'org.tensorflow:tensorflow-lite-task-vision:0.0.0-nightly'
+    implementation 'org.tensorflow:tensorflow-lite-task-vision:0.0.0-nightly' { changing = true }
 
     // Glide
     implementation 'com.github.bumptech.glide:glide:4.11.0'
