--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,7 +9,7 @@ android {
     buildToolsVersion "29.0.3"
 
     defaultConfig {
-        applicationId "com.soloupis.segmentation_and_style_transfer"
+        applicationId "com.soloupis.ocr_keras"
         minSdkVersion 21
         targetSdkVersion 29
         versionCode 1
@@ -81,7 +81,7 @@ dependencies {
     implementation("org.tensorflow:tensorflow-lite-gpu:${tfl_version}") { changing = true }
     implementation 'org.tensorflow:tensorflow-lite-support:0.0.0-nightly'
     // Dependency for Segmentation with Task Library
-    implementation 'org.tensorflow:tensorflow-lite-task-vision:0.0.0-nightly' { changing = true }
+    implementation 'org.tensorflow:tensorflow-lite-task-vision:0.0.0-nightly'
 
     // Glide
     implementation 'com.github.bumptech.glide:glide:4.11.0'
