--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.soloupis.sample.segmentationandstyletransfer">
+    package="com.soloupis.sample.ocr_keras">
 
     <!-- Make sure there is at least one camera -->
     <uses-feature android:name="android.hardware.camera.any" />
@@ -10,14 +10,14 @@
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <application
-        android:name=".SegmentationAndStyleTransferApplication"
+        android:name="com.soloupis.sample.ocr_keras.SegmentationAndStyleTransferApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name="com.soloupis.sample.segmentationandstyletransfer.MainActivity">
+        <activity android:name="com.soloupis.sample.ocr_keras.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
