--- a/app/build.gradle
+++ b/app/build.gradle
@@ -83,6 +83,8 @@ dependencies {
     // Dependency for Segmentation with Task Library
     implementation 'org.tensorflow:tensorflow-lite-task-vision:0.0.0-nightly'
 
+    implementation 'org.tensorflow:tensorflow-lite-select-tf-ops:0.0.0-nightly'
+
     // Glide
     implementation 'com.github.bumptech.glide:glide:4.11.0'
     kapt 'com.github.bumptech.glide:compiler:4.11.0'
