--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,6 +16,10 @@ android {
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+
+        ndk {
+            abiFilters 'armeabi-v7a', 'arm64-v8a'
+        }
     }
 
     buildTypes {
@@ -67,10 +71,10 @@ dependencies {
 
     // TensorFlow Lite dependencies
     def tfl_version = "0.0.0-nightly"
-    //implementation 'org.tensorflow:tensorflow-lite-metadata:0.1.0-rc2'
-    //implementation("org.tensorflow:tensorflow-lite:${tfl_version}") { changing = true }
+    //implementation 'org.tensorflow:tensorflow-lite-metadata:0.1.0'
+    implementation("org.tensorflow:tensorflow-lite:${tfl_version}") { changing = true }
     //implementation("org.tensorflow:tensorflow-lite-gpu:${tfl_version}") { changing = true }
-    //implementation 'org.tensorflow:tensorflow-lite-support:0.0.0-nightly'
+    //implementation 'org.tensorflow:tensorflow-lite-support:0.1.0'
     implementation 'org.tensorflow:tensorflow-lite-select-tf-ops:0.0.0-nightly'
 
     // Glide
@@ -95,8 +99,8 @@ dependencies {
     implementation 'com.google.android.gms:play-services-mlkit-text-recognition:16.1.2'
 
     // Use custom .aar files in libs folder
-    implementation project(':tensorflow-lite-main')
+    //implementation project(':tensorflow-lite-main')
     //implementation project(':tensorflow-lite-ops')
-    //implementation files('libs/tensorflow-lite-main.aar')
-    //implementation files('libs/tensorflow-lite-ops.aar')
+    //implementation files('libs/tensorflow-lite.aar')
+    //implementation files('libs/tensorflow-lite-ops1.aar')
 }
