--- a/app/build.gradle
+++ b/app/build.gradle
@@ -72,10 +72,10 @@ dependencies {
     // TensorFlow Lite dependencies
     def tfl_version = "0.0.0-nightly"
     //implementation 'org.tensorflow:tensorflow-lite-metadata:0.1.0'
-    implementation("org.tensorflow:tensorflow-lite:${tfl_version}") { changing = true }
+    //implementation("org.tensorflow:tensorflow-lite:${tfl_version}") { changing = true }
     //implementation("org.tensorflow:tensorflow-lite-gpu:${tfl_version}") { changing = true }
     //implementation 'org.tensorflow:tensorflow-lite-support:0.1.0'
-    implementation 'org.tensorflow:tensorflow-lite-select-tf-ops:0.0.0-nightly'
+    //implementation 'org.tensorflow:tensorflow-lite-select-tf-ops:0.0.0-nightly'
 
     // Glide
     implementation 'com.github.bumptech.glide:glide:4.11.0'
@@ -98,9 +98,20 @@ dependencies {
     // ML kit - Text Recognition
     implementation 'com.google.android.gms:play-services-mlkit-text-recognition:16.1.2'
 
-    // Use custom .aar files in libs folder
-    //implementation project(':tensorflow-lite-main')
-    //implementation project(':tensorflow-lite-ops')
-    //implementation files('libs/tensorflow-lite.aar')
-    //implementation files('libs/tensorflow-lite-ops1.aar')
+}
+
+// Use custom .aar files in libs folder
+allprojects {
+    repositories {
+        jcenter()
+        flatDir {
+            dirs 'libs'
+        }
+    }
+}
+
+dependencies {
+    implementation(name:'tensorflow-lite', ext:'aar')
+    //implementation(name:'tensorflow-lite-main', ext:'aar')
+    implementation(name:'tensorflow-lite-ops', ext:'aar')
 }
