--- a/app/build.gradle
+++ b/app/build.gradle
@@ -71,11 +71,11 @@ dependencies {
 
     // TensorFlow Lite dependencies
     def tfl_version = "0.0.0-nightly"
-    //implementation 'org.tensorflow:tensorflow-lite-metadata:0.1.0'
-    //implementation("org.tensorflow:tensorflow-lite:${tfl_version}") { changing = true }
+    //implementation 'org.tensorflow:tensorflow-lite-metadata:0.1.0-rc7'
+    implementation("org.tensorflow:tensorflow-lite:${tfl_version}") { changing = true }
     //implementation("org.tensorflow:tensorflow-lite-gpu:${tfl_version}") { changing = true }
-    //implementation 'org.tensorflow:tensorflow-lite-support:0.1.0'
-    //implementation 'org.tensorflow:tensorflow-lite-select-tf-ops:0.0.0-nightly'
+    //implementation 'org.tensorflow:tensorflow-lite-support:0.1.0-rc7'
+    implementation 'org.tensorflow:tensorflow-lite-select-tf-ops:0.0.0-nightly'
 
     // Glide
     implementation 'com.github.bumptech.glide:glide:4.11.0'
@@ -111,7 +111,9 @@ allprojects {
 }
 
 dependencies {
-    implementation(name:'tensorflow-lite', ext:'aar')
+    //implementation(name:'tensorflow-lite', ext:'aar')
     //implementation(name:'tensorflow-lite-main', ext:'aar')
-    implementation(name:'tensorflow-lite-ops', ext:'aar')
+    //implementation(name:'tensorflow-lite-ops', ext:'aar')
+    //implementation(name:'tensorflow-lite-support-0.1.0', ext:'aar')
+    implementation(name:'tensorflow-lite-support-0.1.2', ext:'aar')
 }
