--- a/app/build.gradle
+++ b/app/build.gradle
@@ -72,7 +72,7 @@ dependencies {
     // TensorFlow Lite dependencies
     def tfl_version = "0.0.0-nightly"
     //implementation 'org.tensorflow:tensorflow-lite-metadata:0.1.0-rc7'
-    implementation("org.tensorflow:tensorflow-lite:${tfl_version}") { changing = true }
+    //implementation("org.tensorflow:tensorflow-lite:${tfl_version}") { changing = true }
     //implementation("org.tensorflow:tensorflow-lite-gpu:${tfl_version}") { changing = true }
     //implementation 'org.tensorflow:tensorflow-lite-support:0.1.0-rc7'
     implementation 'org.tensorflow:tensorflow-lite-select-tf-ops:0.0.0-nightly'
@@ -112,8 +112,8 @@ allprojects {
 
 dependencies {
     //implementation(name:'tensorflow-lite', ext:'aar')
-    //implementation(name:'tensorflow-lite-main', ext:'aar')
+    implementation(name:'tensorflow-lite-2.4.0', ext:'aar')
     //implementation(name:'tensorflow-lite-ops', ext:'aar')
     //implementation(name:'tensorflow-lite-support-0.1.0', ext:'aar')
-    implementation(name:'tensorflow-lite-support-0.1.2', ext:'aar')
+    implementation(name:'tensorflow-lite-support-0.1.4', ext:'aar')
 }
