--- a/app/build.gradle
+++ b/app/build.gradle
@@ -69,14 +69,6 @@ dependencies {
     implementation "androidx.navigation:navigation-ui-ktx:2.3.2"
     implementation "android.arch.navigation:navigation-fragment-ktx:1.0.0"
 
-    // TensorFlow Lite dependencies
-    def tfl_version = "0.0.0-nightly"
-    //implementation 'org.tensorflow:tensorflow-lite-metadata:0.1.0-rc7'
-    //implementation("org.tensorflow:tensorflow-lite:${tfl_version}") { changing = true }
-    //implementation("org.tensorflow:tensorflow-lite-gpu:${tfl_version}") { changing = true }
-    //implementation 'org.tensorflow:tensorflow-lite-support:0.1.0-rc7'
-    implementation 'org.tensorflow:tensorflow-lite-select-tf-ops:0.0.0-nightly'
-
     // Glide
     implementation 'com.github.bumptech.glide:glide:4.11.0'
     kapt 'com.github.bumptech.glide:compiler:4.11.0'
@@ -98,6 +90,14 @@ dependencies {
     // ML kit - Text Recognition
     implementation 'com.google.android.gms:play-services-mlkit-text-recognition:16.1.2'
 
+    // TensorFlow Lite dependencies
+    def tfl_version = "0.0.0-nightly"
+    //implementation 'org.tensorflow:tensorflow-lite-metadata:0.1.0-rc7'
+    //implementation("org.tensorflow:tensorflow-lite:${tfl_version}") { changing = true }
+    //implementation("org.tensorflow:tensorflow-lite-gpu:${tfl_version}") { changing = true }
+    //implementation 'org.tensorflow:tensorflow-lite-support:0.1.0-rc7'
+    //implementation 'org.tensorflow:tensorflow-lite-select-tf-ops:0.0.0-nightly'
+
 }
 
 // Use custom .aar files in libs folder
@@ -111,9 +111,7 @@ allprojects {
 }
 
 dependencies {
-    //implementation(name:'tensorflow-lite', ext:'aar')
     implementation(name:'tensorflow-lite-2.4.0', ext:'aar')
-    //implementation(name:'tensorflow-lite-ops', ext:'aar')
-    //implementation(name:'tensorflow-lite-support-0.1.0', ext:'aar')
+    implementation(name:'tensorflow-lite-ops', ext:'aar')
     implementation(name:'tensorflow-lite-support-0.1.4', ext:'aar')
 }
