--- a/app/build.gradle
+++ b/app/build.gradle
@@ -113,5 +113,6 @@ allprojects {
 dependencies {
     implementation(name:'tensorflow-lite-custom', ext:'aar')
     implementation(name:'tensorflow-lite-ops-custom', ext:'aar')
-    implementation(name:'tensorflow-lite-support-0.1.2', ext:'aar')
+    //implementation(name:'tensorflow-lite-support-0.1.2', ext:'aar')
+    implementation(name:'tensorflowlite_support_tensor_wrap', ext:'aar')
 }
