--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,10 @@ allprojects {
     repositories {
         google()
         jcenter()
+        maven {       // add this repo to use snapshots
+            name 'ossrh-snapshot'
+            url 'http://oss.sonatype.org/content/repositories/snapshots'
+        }
         
     }
 }
